--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,3 +1,17 @@
-body {
-    background: red;
+.text-center {
+    text-align: center;
+}
+
+.margin-auto {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.display-none {
+    display: none !important;
+}
+
+
+.container {
+    width: 100%;
 }
